# training

./: .edit  README.md
lessons/01-quicktour/01-hello/: CMakeLists.txt  README.rst
lessons/01-quicktour/01-hello/src/: main.c
lessons/01-quicktour/02-blink/: CMakeLists.txt  README.rst
lessons/01-quicktour/02-blink/src/: main.c
lessons/01-quicktour/03-button/: CMakeLists.txt  README.rst
lessons/01-quicktour/04-blinky/: CMakeLists.txt  README.rst
lessons/01-quicktour/04-rgbcycle/: CMakeLists.txt  README.rst
lessons/01-quicktour/04-rgbcycle/src/: main.c
lessons/01-quicktour/05-blinker/: CMakeLists.txt  README.rst
lessons/01-quicktour/05-ledtoggle/: CMakeLists.txt  README.rst
lessons/01-quicktour/05-ledtoggle/src/: main.c
lessons/01-quicktour/06-ledtoggle/: CMakeLists.txt
lessons/01-quicktour/06-rgbcycle/: CMakeLists.txt  README.rst
lessons/01-quicktour/07-attention/: CMakeLists.txt  prj.conf
lessons/01-quicktour/07-attention/src/: main.c  ocore2.c
lessons/01-quicktour/07-nvm/: CMakeLists.txt  README.rst
lessons/01-quicktour/07-nvm/src/: main.c
lessons/01-quicktour/08-attention/: CMakeLists.txt  README.rst
lessons/01-quicktour/08-clisrv/: CMakeLists.txt  README.rst
lessons/01-quicktour/08-clisrv/src/: main.c
lessons/01-quicktour/09-clisrv/: CMakeLists.txt  README.rst  prj.conf
lessons/01-quicktour/09-clisrv/src/: main.c
lessons/01-quicktour/10-reliable/: CMakeLists.txt  README.rst
lessons/01-quicktour/10-reliable/src/: main.c
lessons/02-messaging/01-blob/: CMakeLists.txt  README.rst
lessons/02-messaging/01-funny/: CMakeLists.txt  README.rst  prj.conf
lessons/02-messaging/01-ledmsg/: CMakeLists.txt
lessons/02-messaging/02-blob/: CMakeLists.txt  README.rst
lessons/02-messaging/02-funny/: CMakeLists.txt  README.rst
lessons/02-messaging/03-blob/: CMakeLists.txt  README.rst
lessons/02-messaging/04-blob/: CMakeLists.txt  README.rst
lessons/02-messaging/05-ledtoggle/: CMakeLists.txt
lessons/02-messaging/06-ledtoggle/: CMakeLists.txt  README.rst
lessons/02-messaging/06-rgbtoggle/: CMakeLists.txt  README.rst
lessons/02-messaging/06-rgbtoggle/src/: button.c
lessons/02-messaging/07-rgbtoggle/: CMakeLists.txt
lessons/02-messaging/07-rgbtoggle/src/: button.c  button.h  led.h  main.c  main.h
lessons/02-messaging/09-funny/: CMakeLists.txt  README.rst
lessons/02-messaging/09-tockmsg/: CMakeLists.txt  README.rst
lessons/02-messaging/10-msgout/: CMakeLists.txt  README.rst
lessons/03-meshfun/01-onoff/: prj.conf
lessons/03-meshfun/02-swicli/: CMakeLists.txt  README.rst  prj.conf
lessons/03-meshfun/02-swicli/src/: main.c  ocore4.c  ocore5.c
lessons/03-meshfun/03-ledsrv/: CMakeLists.txt  README.rst
lessons/03-meshfun/04-clisrv/: CMakeLists.txt
lessons/03-meshfun/04-clisrv/src/: main.c
lessons/03-meshfun/05-meshnvm/: CMakeLists.txt  README.rst
lessons/03-meshfun/05-nvm/: CMakeLists.txt  README.rst
lessons/03-meshfun/05-nvm/src/: config.h  main.c
lessons/03-meshfun/06-housekeep/: CMakeLists.txt  README.rst
lessons/03-meshfun/06-meshnode/: CMakeLists.txt  README.rst
lessons/03-meshfun/06-meshnode/src/: main.c
lessons/03-meshfun/07-mcore/: CMakeLists.txt  README.rst
lessons/03-meshfun/07-reliable/: CMakeLists.txt  README.rst
lessons/03-meshfun/07-reliable/src/: main.c
lessons/04-housekeep/01-main/: CMakeLists.txt  README.rst  prj.conf
lessons/04-housekeep/02-attention/: CMakeLists.txt  README.rst
lessons/04-housekeep/03-provision/: CMakeLists.txt  README.rst
lessons/06-workbench/07-mcore/: CMakeLists.txt
lessons/08-messaging/02-ledtoggle/: README.rst
lib/V1.0.0/bluccino/: bl_app.h  bl_gear.c  bl_gpio.h  bl_hook.c  bl_hook.h  bl_log.c  bl_rtos.h  bl_run.c  bl_time.c  bl_wl.h  bluccino.h
lib/V1.0.0/module/: bl_house.h
lib/V1.0.5/bluccino/: bl_core.c  bl_gear.c  bl_gear.h  bl_hw.h  bl_main.c  bl_mesh.c  bl_mesh.h  bl_msg.h  bl_sugar.h  bl_time.h
lib/V1.0.6/app/01-bluccino/: CMakeLists.txt  README.rst
lib/V1.0.6/app/01-bluccino/src/: main.c
lib/V1.0.6/bluccino/: bl_class.h  bl_cleanup.h  bl_core.c  bl_gear.c  bl_gear.h  bl_gonoff.h  bl_hw.h  bl_log.c  bl_log.h  bl_msg.h  bl_run.c  bl_run.h  bl_sugar.h  bl_symb.h  bl_time.h  bl_trans.h  bl_type.h  bl_vers.h  bluccino.c
lib/V1.0.6/module/: bl_mpub.c  bl_node.c  bl_node.h
lib/V1.0.7/: README.md
lib/V1.0.7/bluccino/: bl_core.c  bl_deco.c  bl_deco.h  bl_log.c  bl_log.h  bl_mesh.h  bl_msg.h  bl_run.c  bl_run.h  bl_sugar.h  bl_symb.h  bl_time.h  bl_util.h  bluccino.c
lib/V1.0.7/module/: bl_mpub.h  bl_node.c
lib/V1.0.8/: README.md
lib/V1.0.8/bluccino/: bl_clean.h  bl_gear.c  bl_log.c  bl_log.h  bl_mesh.c  bl_reset.h  bl_rtl.c  bl_rtl.h  bl_run.c  bl_run.h  bl_time.c  bl_time.h  bl_trans.c  bl_util.h  bl_vers.h  bluccino.c  bluccino.cpp  bluccino.h
lib/V1.0.8/module/: bl_mpub.c  bl_node.h
lib/V1.0/bluccino/: bl_api.c  bl_api.h  bl_blue.h  bl_core.c  bl_core.h  bl_gear.c  bl_gear.h  bl_gonoff.h  bl_hw.h  bl_log.c  bl_log.h  bl_mesh.h  bl_msg.h  bl_run.c  bl_run.h  bl_sugar.h  bl_symb.h  bl_time.c  bl_type.h  bl_vers.h  bl_wl.h  bluccino.c  bluccino.cpp  bluccino.h
lib/V1.0/hwcore/: bl_hw.c  bl_hwbut.c  bl_hwbut.h  bl_hwled.c  bl_hwled.h
novice-training/01-quicktour/08-clisrv/: CMakeLists.txt  README.rst
novice-training/01-quicktour/08-clisrv/src/: main.c
novice-training/03-meshfun/04-clisrv/: CMakeLists.txt
samples/01-basic/03-timer/: CMakeLists.txt  README.rst  prj.conf
samples/01-basic/03-timer/src/: main.c  timer.c  timer.h
samples/01-basic/05-attention/: CMakeLists.txt  README.rst  prj.conf
samples/01-basic/05-attention/src/: main.c  ocore2.c
samples/01-basic/06-blinker/: CMakeLists.txt  README.rst
samples/01-basic/06-blinker/src/: config.h  main.c  ocore3.c
samples/01-basic/08-tock/: CMakeLists.txt  README.rst  package-lock.json
samples/01-basic/08-tock/src/: main.c
samples/01-basic/09-critical/: CMakeLists.txt  README.rst
samples/01-basic/09-critical/src/: main.c
samples/03-logging/02-hello/: CMakeLists.txt  README.rst  prj.conf
samples/03-logging/02-hello/src/: bl_lfifo.c  bl_lfifo.h  main.c
(+193 files in other folders)
